# starguard-desktop

./: .cursorrules  .dockerignore  .gitignore  2_ROI_AnalYSIS.md  ACCESS_PHASE4.md  ADD_FOOTER_TO_PAGES.md  AI_INSIGHTS_COMPLETE.md  AI_INSIGHTS_QUICK_START.md  AI_INSIGHTS_SETUP.md  AI_INSIGHTS_WORKING.md  ALERT_CENTER_SPACING_FIX_APPLIED.md  ALERT_CENTER_SPACING_REPLACEMENT.md  ALERT_CENTER_TESTING_GUIDE.md  ALERT_SYSTEM_GUIDE.md  ALERT_SYSTEM_QUICK_START.md  ALL_PAGES_ENHANCED.md  ALL_PAGES_SPACING_FIXED.md  ALL_PAGES_UPDATED.md  ALTERNATIVE_SOLUTION_RENAME_FILE.md  ANDROID_TEST_GUIDE.md  API_FIX_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  AUTOMATED_UPDATE_PROMPTS.md  AUTO_RESTART_USAGE.md  BATCH_UPDATE_COMPLETE.md  BATCH_UPDATE_PROGRESS.md  BATCH_UPDATE_SIDEBARS.py  BENCHMARKING_GUIDE.md  BENCHMARKING_QUICK_START.md  CAMPAIGN_BUILDER_GUIDE.md  CAMPAIGN_BUILDER_QUICK_START.md  CANVA_DESIGN_SPECIFICATIONS.md  CANVA_PORTFOLIO_DESIGN.md  CANVA_PORTFOLIO_SECTIONS.md  CANVA_PORTFOLIO_STRUCTURE.md  CLEAR_CACHE_AND_RESTART.bat  COMPARISON.md  COMPATIBILITY_MATRIX.md  COMPATIBILITY_QUICK_START.md  (+253 more)
.streamlit/: config.toml  pages.toml
components/: __init__.py  visualization_components.py
compound_framework/: __init__.py  ai_engine_enhanced.py  create_golden_dataset.py  financial_impact.py  golden_dataset.csv  hedis_schemas.py  session_context.py
config/: __init__.py  ai_config.py  settings.py
core/: __init__.py  config.py  exceptions.py  logging.py
data/: __init__.py  create_sdoh_mapping.py  create_sentiment_corpus.py  db.py  hedis_portfolio.db  sdoh_mapping.csv  sentiment_corpus.csv
domain/: __init__.py  entities.py  value_objects.py
infrastructure/: __init__.py  cache.py  database.py
modules/: __init__.py  agentic_outreach.py  channel_optimizer.py  portfolio_scenario.py  sdoh_mapper.py  sentiment_analyzer.py  shared_ui.py
pages/: 10_📈_Historical_Tracking.py  11_💰_ROI_Calculator.py  12_🎯_Intervention_Portfolio_Optimizer.py  13_📋_Measure_Analysis.py  14_⭐_Star_Rating_Simulator.py  15_🔄_Gap_Closure_Workflow.py  16_🤖_ML_Gap_Closure_Predictions.py  17_📊_Competitive_Benchmarking.py  18_📋_Compliance_Reporting.py  18_🤖_Secure_AI_Chatbot.py  19_⚖️_Health_Equity_Index.py  1_📊_ROI_by_Measure.py  20_⏱️_Development_Timeline.py  2_💰_Cost_Per_Closure.py  3_📈_Monthly_Trend.py  4_💵_Budget_Variance.py  5_🎯_Cost_Tier_Comparison.py  6_🤖_AI_Executive_Insights.py  7_📊_What-If_Scenario_Modeler.py  8_🎓_AI_Capabilities_Demo.py  8_📋_Campaign_Builder.py  9_🔔_Alert_Center.py  Performance_Dashboard.py  __init__.py
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  conftest_ui.py  test_ai_insights.py  test_calculators.py  test_starguard_desktop.py
ui/: __init__.py  mobile_badge.py
utils/: FILTER_USAGE_GUIDE.md  MOBILE_CHARTS_GUIDE.md  MOBILE_NAVIGATION_GUIDE.md  MOBILE_TABLES_GUIDE.md  PERFORMANCE_GUIDE.md  RESPONSIVE_LAYOUT_GUIDE.md  TABLE_USAGE_GUIDE.md  __init__.py  advanced_filters.py  ai_insights_data.py  ai_insights_generator.py  alert_system.py  campaign_builder.py  charts.py  competitive_benchmarking.py  compliance_reporting.py  data_helpers.py  data_loader.py  data_validation.py  database.py  (+52 more)
(+67 files in other folders)
