[project]
name = "starguard-desktop"
version = "0.1.0"
description = "StarGuard Desktop — Medicare Advantage Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starguard-core>=1.0.0",
    "shiny>=1.2.0",
    "shinywidgets>=0.3.0",
    "htmltools>=0.5.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "qrcode[pillow]>=7.0.0",
    "gspread>=6.0.0",
    "google-auth>=2.28.0",
    "supabase==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Entry: app:app (shiny run app.py)
# Port: 7860

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"app.py" = ["E402"]
"utils/queries.py" = ["W291", "W293"]
"utils/data_helpers.py" = ["E722"]
"compound_framework/financial_impact.py" = ["N806"]
"diagnose_sidebar.py" = ["E402"]
"intervention_optimizer.py" = ["E731"]
"modules/shared_ui.py" = ["W293"]
"utils/charts.py" = ["E722"]  # Bare except for Plotly fallbacks

[tool.ruff.isort]
known-first-party = ["app", "hedis_gap_trail", "cloud_status_badge", "hitl_admin_view", "suppression_banner", "intervention_optimizer"]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
strict = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
